# xsimd-algorithm

./: .gitignore  CMakeLists.txt  README.md  environment-dev.yml  xsimd-algorithmConfig.cmake.in
.github/workflows/: linux.yml
include/xsimd_algo/: algorithms.hpp
include/xsimd_algorithm/: algorithms.hpp
include/xsimd_algorithm/stl/: reduce.hpp  transform.hpp
test/: CMakeLists.txt  main.cpp  test_algorithms.cpp  test_iterator.cpp  test_reduce.cpp  test_transform.cpp
